fix blurry logos; fix author and h2 spacing

--- a/static/sass/styles.scss
+++ b/static/sass/styles.scss
@@ -823,7 +823,7 @@ html {
       grid-column: 3 / span 1;
     }
     @media (min-width: $threshold-6-12-col) {
-      grid-column: 3 / span 4;
+      grid-column: 3 / span 3;
     }
   }
 
